# shy

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: clippy.yml  lint.yml  release.yml
assets/tapes/: shy.tape
src/: args.rs  main.rs
src/lib/: command.rs  control.rs  fmt.rs  format.rs  glyphs.rs  helper.rs  lib.rs  log.rs  playback.rs  queue.rs
src/lib/player/: command.rs  mod.rs  playback.rs
