[package]
name = "shy"
version = "0.8.0"
description = "A command line remote controller for MusicBee"
authors = ["fawn <fawn@envs.net>"]
license = "OSL-3.0"
repository = "https://github.com/fawni/shy"
keywords = ["musicbee"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }

clap = { version = "4.3.2", features = ["derive"] }
owo-colors = "3.5.0"

serde = { version = "1.0.163", features = ["derive"] }
miette = { version = "5.9.0", features = ["fancy"] }
fs-err = { version = "2.9.0", features = ["tokio"] }

dirs = "5.0.1"
winapi = { version = "0.3.9", features = ["consoleapi"] }
urlencoding = "2.1.2"
once_cell = "1.18.0"
serde-xml-rs = "0.6.0"
lofty = "0.14.0"

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "parking_lot", "process"]
version = "1.28.2"

[lib]
name = "shy"
path = "src/lib/lib.rs"

[[bin]]
name = "shy"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
