[package]
name = "shy"
version = "0.8.1"
description = "A command line remote controller for MusicBee"
authors = ["fawn <fawn@envs.net>"]
license = "OSL-3.0"
repository = "https://github.com/fawni/shy"
keywords = ["musicbee"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }

clap = { version = "4.4.6", features = ["derive"] }
owo-colors = "3.5.0"

serde = { version = "1.0.189", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
fs-err = { version = "2.9.0", features = ["tokio"] }

dirs = "5.0.1"
winapi = { version = "0.3.9", features = ["consoleapi"] }
urlencoding = "2.1.3"
once_cell = "1.18.0"
serde-xml-rs = "0.6.0"
lofty = "0.16.1"

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "parking_lot", "process"]
version = "1.33.0"

[lib]
name = "shy"
path = "src/lib/lib.rs"

[[bin]]
name = "shy"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
